form css updated, button overflow fixed

--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ form {
 form div {
 	display: flex;
 	justify-content: space-between;
+	flex: 1;
 }
 
 form label {
@@ -116,6 +117,7 @@ form button {
 	font-size: 24px;
 	padding: 15px;
 	width: 100%;
+	flex: 1;
 }
 
 /* -------- Host -------- */
@@ -161,9 +163,9 @@ footer p {
 		margin: 10px 0 -5px;
 	}
 
-	form button {
+	/* form button {
 		width: 12%;
-	}
+	} */
 
 	/* --------- Sections --------- */
 
